src/test/resources/frontendReference/invalid/semanticErr/function/functionRedefine.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 11:0 -- "f" is already defined in this scope
